refactor: Update double to num

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ funding:
   - https://www.buymeacoffee.com/fl_chart
 
 dependencies:
+  decimal: ^2.3.3
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+
 
 dev_dependencies:
   build_runner: ^2.4.6
